--- a/Modulo - 13/MERNTasks/servidor/package.json
+++ b/Modulo - 13/MERNTasks/servidor/package.json
@@ -15,6 +15,6 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongose": "0.0.2-security"
+    "mongoose": "^5.10.5"
   }
 }
